<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ReaderApp</string>
    <string name="drawer_open">ReaderApp</string>
    <string name="drawer_closed">ReaderApp</string>
    
    <!--General-->
    <string name="cancel">Cancel</string>
    <string name="confirm">Ok</string>

    <string name="hello_world">Hello world!</string>
    <string name="register">Register</string>


    <!-- Login/RegisterDialogs -->
    <string name="username_hint">Enter username</string>
    <string name="password_hint">Enter password</string>
    <string name="repeat_password_hint">Repeat password</string>
    <string name="firstname_hint">Enter first name</string>
    <string name="lastname_hint">Enter last name</string>
    <string name="email_hint">Enter email</string>

    <string name="invalid_login">Invaling login credentials</string>
    <string name="connection_error">Connection error</string>
    <string name="register_success">Registration successful</string>
    <string name="register_failure">Registration failure</string>
    <string name="username_failure">Username is already in use</string>
    <string name="password_failure">Passwords must be the same</string>
    
    <!--Menu Items-->
    <string name="action_settings">Settings</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="login_success">You have logged in as user:</string>
    <string name="login_failure">Login failed. Try again.</string>

    <!-- Home Fragment Strings -->
    <string name="home_new_file">New File</string>
    <string name="home_load_file">Load File</string>
    <string name="home_import_file">Import File from Cloud</string>
    <string name="home_dropbox_file">New File from Dropbox</string>

    <string name="audio_fragment_tag">audio_fragment</string>

</resources>
